grammar.js
        document: $ => seq(
            field("version", $.version),
            field("body", $.document_body)
        ),

        document_body: $ => repeat1(
            choice(
                $.import,
                $.struct,
                $.workflow,
                $.task
            )
        ),

        version: $ => seq(
            KEYWORD.version,
            field("identifier", choice(
                $.float,
                $.simple_string
            ))
        ),

        workflow: $ => seq(
            KEYWORD.workflow,
            field("name", $.identifier),
            field("body", $.workflow_body),
        ),

        workflow_body: $ => block(
            repeat1(
                choice(
                    $.input,
                    $.output,
                    $.bound_declaration,
                    $.call,
                    $.scatter,
                    $.conditional,
                    $.meta,
                    $.parameter_meta
                )
            )
        ),

        task: $ => seq(
            KEYWORD.task,
            field("name", $.identifier),
            field("body", $.task_elements),
        ),

        task_elements: $ => block(
            repeat1(
                choice(
                    $.input,
                    $.output,
                    $.bound_declaration,
                    $.command,
                    $.runtime,
                    $.meta,
                    $.parameter_meta
                )
            )
        ),

        command: $ => seq(
            KEYWORD.command,
            choice(
                seq(
                    field("start", SYMBOL.lbrace),
                    optional(field("parts", alias($.command_brace_parts, $.command_parts))),
                    field("end", SYMBOL.rbrace)
                ),
                seq(
                    field("start", SYMBOL.heredoc_start),
                    optional(field("parts", alias($.command_heredoc_parts, $.command_parts))),
                    field("end", SYMBOL.heredoc_end)
                )
            )
        ),

        input: $ => seq(
            KEYWORD.input,
            field("declarations", $.input_declarations)
        ),

        input_declarations: $ => block(
            repeat1(
                choice(
                    $.unbound_declaration,
                    $.bound_declaration
                )
            )
        ),

        unbound_declaration: $ => seq(
            field("type", $._type),
            field("name", $.identifier),
        ),

        bound_declaration: $ => seq(
            field("type", $._type),
            field("name", $.identifier),
            OPER.assign,
            field("expression", $._expression)
        ),

        _type: $ => prec.right(choice(
            $.optional_type,
            $._required_type,
        )),

        boolean_type: $ => KEYWORD.boolean,
        string_type: $ => KEYWORD.string,
        file_type: $ => KEYWORD.file,
        _expression: $ => choice(
            $._primary_expression,
            $.and_operator,
            $.or_operator,
            $.not_operator,
            $.comparison_operator
        ),

        apply_expression: $ => prec(PREC.apply, seq(
            field("name", $.identifier),
            field("arguments", $.argument_list)
        )),

        argument_list: $ => seq(
            SYMBOL.lparen,
            optional(commaSep1($._expression)),
            SYMBOL.rparen
        ),

        ternary_expression: $ => prec.right(seq(
            KEYWORD.if,
            field("condition", $._expression),
            KEYWORD.then,
            field("true", $._expression),
            KEYWORD.else,
            field("false", $._expression)
        )),

        true: $ => KEYWORD.true,
        _number: $ => prec.right(PREC.number, choice(
            $.hex_int,
            $.oct_int,
            $.dec_int,
            $.float
        )),

        float: $ => {
            const sign = /[\+-]?/
            const digits = /\d+/
            const exponent = seq(/[eE][\+-]?/, digits)
            return token(choice(
                seq(sign, digits, SYMBOL.dot, optional(digits), optional(exponent)),
                seq(sign, optional(digits), SYMBOL.dot, digits, optional(exponent)),
                seq(sign, digits, exponent)
            ))
        },

        string: $ => choice(
            seq(
                field("start", SYMBOL.squote),
                optional(field("parts", alias($.string_squote_parts, $.string_parts))),
                field("end", SYMBOL.squote)
            ),
            seq(
                field("start", SYMBOL.dquote),
                optional(field("parts", alias($.string_dquote_parts, $.string_parts))),
                field("end", SYMBOL.dquote)
            ),
        ),

        simple_string: $ => choice(
            seq(
                field("start", SYMBOL.squote),
                optional(field("parts", alias($.simple_string_squote_parts, $.string_parts))),
                field("end", SYMBOL.squote)
            ),
            seq(
                field("start", SYMBOL.dquote),
                optional(field("parts", alias($.simple_string_dquote_parts, $.string_parts))),
                field("end", SYMBOL.dquote)
            ),
        ),

        option_key: _ => token(seq(
            field("key", choice(
                KEYWORD.sep,
                KEYWORD.default,
                KEYWORD.true,
                KEYWORD.false
            )),
            OPER.assign,
        )),

        placeholder_option: $ => seq(
            $.option_key,
            field("value", choice(
                $.simple_string,
                $._number
            )),
        ),

        placeholder: $ => prec(1, choice(
            $._tilde_placeholder,
            $._dollar_placeholder
        )),

        _tilde_placeholder: $ => seq(
            SYMBOL.tilde_placeholder,
            repeat(
                field("option", $.placeholder_option)
            ),
            field("expression", $._expression),
            SYMBOL.rbrace
        ),

        _dollar_placeholder: $ => seq(
            SYMBOL.dollar_placeholder,
            field("expression", $._expression),
            SYMBOL.rbrace
        ),

        escape_sequence: $ => token(prec(1, seq(
            SYMBOL.escape,
            choice(
                /u[a-fA-F\d]{4}/,
                /U[a-fA-F\d]{8}/,
                /x[a-fA-F\d]{2}/,
                /[0-7]{1,3}/,
                /['"nt~$\\]/
            )
        ))),

        array: $ => field("elements", $.array_elements),

        array_elements: $ => seq(
            SYMBOL.lbrack,
            optional(commaSep1($._expression)),
            SYMBOL.rbrack
        ),

        identifier: $ => /[a-zA-Z][a-zA-Z0-9_]*/,
