test/corpus/strings.txt
=======
Strings
=======

version 1.1

workflow Test {
    input {
        String name = "John"
        Boolean b = true
    }

    String s1 = ""
    String s2 = ''
    String s3 = "hello"
    String s4 = "hello \"John\", how are you?"
    String s5 = 'hello'
    String s6 = 'hello \'John\', how are you?'
    String s7 = "hello 'John', how are you?"
    String s8 = 'hello "John", how are you?'
    String s9 = "hello ~{name}, how are you?"
    String s10 = "hello \"~{name}\", how are you?"
    String s11 = "hello ~{sep=" " ['John', 'Doe']}, how are you?"
    String s12 = "hello ~{if b then "~{name}" else "Buddy"}"
    String s13 = "~ $"
    String s14 = "hello ~{sep(" ", ['John', 'Doe'])}, how are you?"
}

---

(document
    version: (version
        identifier: (float)
    )
    body: (document_body
        (workflow
            name: (identifier)
            body: (workflow_body
                (input
                    declarations: (input_declarations
                        (bound_declaration
                            type: (string_type)
                            name: (identifier)
                            expression: (string
                                parts: (string_parts
                                    (content)
                                )
                            )
                        )
                        (bound_declaration
                            type: (boolean_type)
                            name: (identifier)
                            expression: (true)
                        )
                    )
                )
                (bound_declaration
                    type: (string_type)
                    name: (identifier)
                    expression: (string)
                )
                (bound_declaration
                    type: (string_type)
                    name: (identifier)
                    expression: (string)
                )
                (bound_declaration
                    type: (string_type)
                    name: (identifier)
                    expression: (string
                        parts: (string_parts
                            (content)
                        )
                    )
                )
                (bound_declaration
                    type: (string_type)
                    name: (identifier)
                    expression: (string
                        parts: (string_parts
                            (content)
                            (escape_sequence)
                            (content)
                            (escape_sequence)
                            (content)
                        )
                    )
                )
                (bound_declaration
                    type: (string_type)
                    name: (identifier)
                    expression: (string
                        parts: (string_parts
                            (content)
                        )
                    )
                )
                (bound_declaration
                    type: (string_type)
                    name: (identifier)
                    expression: (string
                        parts: (string_parts
                            (content)
                            (escape_sequence)
                            (content)
                            (escape_sequence)
                            (content)
                        )
                    )
                )
                (bound_declaration
                    type: (string_type)
                    name: (identifier)
                    expression: (string
                        parts: (string_parts
                            (content)
                        )
                    )
                )
                (bound_declaration
                    type: (string_type)
                    name: (identifier)
                    expression: (string
                        parts: (string_parts
                            (content)
                        )
                    )
                )
                (bound_declaration
                    type: (string_type)
                    name: (identifier)
                    expression: (string
                        parts: (string_parts
                            (content)
                            (placeholder
                                expression: (identifier)
                            )
                            (content)
                        )
                    )
                )
                (bound_declaration
                    type: (string_type)
                    name: (identifier)
                    expression: (string
                        parts: (string_parts
                            (content)
                            (escape_sequence)
                            (placeholder
                                expression: (identifier)
                            )
                            (escape_sequence)
                            (content)
                        )
                    )
                )
                (bound_declaration
                    type: (string_type)
                    name: (identifier)
                    expression: (string
                        parts: (string_parts
                            (content)
                            (placeholder
                                option: (placeholder_option
                                    (option_key)
                                    value: (simple_string
                                        parts: (string_parts
                                            (content))))
                                expression: (array
                                    elements: (array_elements
                                        (string
                                            parts: (string_parts
                                                (content)))
                                        (string
                                            parts: (string_parts
                                                (content))))))
                            (content)
                        )
                    )
                )
                (bound_declaration
                    type: (string_type)
                    name: (identifier)
                    expression: (string
                        parts: (string_parts
                            (content)
                            (placeholder
                                expression: (ternary_expression
                                    condition: (identifier)
                                    true: (string
                                        parts: (string_parts
                                            (placeholder
                                                expression: (identifier)
                                            )
                                        )
                                    )
                                    false: (string
                                        parts: (string_parts
                                            (content)
                                        )
                                    )
                                )
                            )
                        )
                    )
                )
                (bound_declaration
                    type: (string_type)
                    name: (identifier)
                    expression: (string
                        parts: (string_parts
                            (content)
                            (content)
                            (content)
                        )
                    )
                )
                (bound_declaration
                    type: (string_type)
                    name: (identifier)
                    expression: (string
                        parts: (string_parts
                            (content)
                            (placeholder
                                expression: (apply_expression
                                    name: (identifier)
                                    arguments: (argument_list
                                        (string
                                            parts: (string_parts
                                                (content)
                                            )
                                        )
                                        (array
                                            elements: (array_elements
                                                (string
                                                    parts: (string_parts
                                                        (content)
                                                    )
                                                )
                                                (string
                                                    parts: (string_parts
                                                        (content)
                                                    )
                                                )
                                            )
                                        )
                                    )
                                )
                            )
                            (content)
                        )
                    )
                )
            )
        )
    )
)